--- a/Breakpoint/View/Base.lproj/Main.storyboard
+++ b/Breakpoint/View/Base.lproj/Main.storyboard
@@ -6,6 +6,7 @@
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13165.3"/>
         <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
         <capability name="Constraints with non-1.0 multipliers" minToolsVersion="5.1"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
@@ -388,18 +389,51 @@
                                         <fontDescription key="fontDescription" name="Menlo-Regular" family="Menlo" pointSize="16"/>
                                         <textInputTraits key="textInputTraits"/>
                                     </textField>
-                                    <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="none" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="XxM-oU-Fvo">
+                                    <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="none" rowHeight="60" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="XxM-oU-Fvo">
                                         <rect key="frame" x="0.0" y="213" width="335" height="344"/>
                                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                                         <prototypes>
-                                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" id="8Ez-Mb-ATv">
-                                                <rect key="frame" x="0.0" y="28" width="335" height="44"/>
+                                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="UserCell" rowHeight="60" id="8Ez-Mb-ATv" customClass="UserCell" customModule="Breakpoint" customModuleProvider="target">
+                                                <rect key="frame" x="0.0" y="28" width="335" height="60"/>
                                                 <autoresizingMask key="autoresizingMask"/>
                                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="8Ez-Mb-ATv" id="sWz-Lj-gfH">
-                                                    <rect key="frame" x="0.0" y="0.0" width="335" height="44"/>
+                                                    <rect key="frame" x="0.0" y="0.0" width="335" height="60"/>
                                                     <autoresizingMask key="autoresizingMask"/>
+                                                    <subviews>
+                                                        <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="defaultProfileImage" translatesAutoresizingMaskIntoConstraints="NO" id="elQ-CU-eh6">
+                                                            <rect key="frame" x="8" y="8" width="44" height="44"/>
+                                                        </imageView>
+                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="user@breakpoint.com" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumFontSize="8" translatesAutoresizingMaskIntoConstraints="NO" id="dGn-9s-r5L">
+                                                            <rect key="frame" x="72" y="10" width="221" height="40"/>
+                                                            <fontDescription key="fontDescription" name="Menlo-Regular" family="Menlo" pointSize="16"/>
+                                                            <color key="textColor" red="0.56078431370000004" green="0.81176470590000005" blue="0.30588235289999999" alpha="1" colorSpace="calibratedRGB"/>
+                                                            <nil key="highlightedColor"/>
+                                                        </label>
+                                                        <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="whiteCheckmark" translatesAutoresizingMaskIntoConstraints="NO" id="ZfT-Rd-lFb">
+                                                            <rect key="frame" x="303" y="18" width="24" height="24"/>
+                                                        </imageView>
+                                                    </subviews>
+                                                    <constraints>
+                                                        <constraint firstItem="dGn-9s-r5L" firstAttribute="leading" secondItem="elQ-CU-eh6" secondAttribute="trailing" constant="20" id="7dw-Qg-n6s"/>
+                                                        <constraint firstItem="dGn-9s-r5L" firstAttribute="top" secondItem="sWz-Lj-gfH" secondAttribute="top" constant="10" id="CSW-db-xFL"/>
+                                                        <constraint firstItem="ZfT-Rd-lFb" firstAttribute="width" secondItem="sWz-Lj-gfH" secondAttribute="height" multiplier="0.4" id="DWN-nk-n0P"/>
+                                                        <constraint firstItem="elQ-CU-eh6" firstAttribute="centerY" secondItem="sWz-Lj-gfH" secondAttribute="centerY" id="IKL-fP-TGH"/>
+                                                        <constraint firstItem="ZfT-Rd-lFb" firstAttribute="height" secondItem="sWz-Lj-gfH" secondAttribute="height" multiplier="0.4" id="VDR-dI-Sj5"/>
+                                                        <constraint firstAttribute="bottom" secondItem="dGn-9s-r5L" secondAttribute="bottom" constant="10" id="XYg-Ng-odZ"/>
+                                                        <constraint firstItem="elQ-CU-eh6" firstAttribute="width" secondItem="sWz-Lj-gfH" secondAttribute="height" multiplier="0.73" id="Xcl-WT-lDU"/>
+                                                        <constraint firstItem="ZfT-Rd-lFb" firstAttribute="leading" secondItem="dGn-9s-r5L" secondAttribute="trailing" constant="10" id="mzW-b9-5TB"/>
+                                                        <constraint firstItem="ZfT-Rd-lFb" firstAttribute="centerY" secondItem="sWz-Lj-gfH" secondAttribute="centerY" id="o6u-PF-UOL"/>
+                                                        <constraint firstItem="ZfT-Rd-lFb" firstAttribute="trailing" secondItem="sWz-Lj-gfH" secondAttribute="trailingMargin" id="sYK-5h-oJN"/>
+                                                        <constraint firstItem="elQ-CU-eh6" firstAttribute="height" secondItem="sWz-Lj-gfH" secondAttribute="height" multiplier="0.73" id="uXu-I7-NNk"/>
+                                                        <constraint firstItem="elQ-CU-eh6" firstAttribute="leading" secondItem="sWz-Lj-gfH" secondAttribute="leadingMargin" id="zlC-Up-5T7"/>
+                                                    </constraints>
                                                 </tableViewCellContentView>
                                                 <color key="backgroundColor" red="0.16078431369999999" green="0.16862745100000001" blue="0.20392156859999999" alpha="1" colorSpace="calibratedRGB"/>
+                                                <connections>
+                                                    <outlet property="checkImage" destination="ZfT-Rd-lFb" id="B67-Ze-8Nz"/>
+                                                    <outlet property="emailLabel" destination="dGn-9s-r5L" id="d2v-29-A6B"/>
+                                                    <outlet property="profileImage" destination="elQ-CU-eh6" id="Nln-nC-IXz"/>
+                                                </connections>
                                             </tableViewCell>
                                         </prototypes>
                                         <connections>
@@ -437,7 +471,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="nAF-kX-pC8" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1494" y="722"/>
+            <point key="canvasLocation" x="1493.5999999999999" y="721.88905547226398"/>
         </scene>
         <!--Me-->
         <scene sceneID="thB-07-xkf">
@@ -759,6 +793,7 @@
         <image name="logoutIcon" width="19" height="21"/>
         <image name="me-tabIcon" width="25" height="25"/>
         <image name="send" width="29" height="29"/>
+        <image name="whiteCheckmark" width="18" height="14"/>
     </resources>
     <color key="tintColor" red="0.015686274510000001" green="0.6705882353" blue="0.7725490196" alpha="1" colorSpace="calibratedRGB"/>
 </document>
